10960
I guess you guys know what you're talking about (because I don't know what **I'm** talking about), but I might like to supply hetero args:
```scala
scala> f"${3.14}%f rounds to ${3}%d"
<console>:8: error: type mismatch;
 found   : Double(3.0)
 required: Int
              f"${3.14}%f rounds to ${3}%d"
                                      ^
```
But FTR, I was prepared to apply whatever snake oil greases the wheel.
